# agents-memory

./: .gitignore  README.md  pyproject.toml
conversational-memory-agent/: EXERCISE.md  agent.py
conversational-memory-agent/memory/: __init__.py  long_term.py  medium_term.py  short_term.py
simple-memory-agent/: .env.example  EXERCISE.md  KNOWN_ISSUES.md  README.md  agent.py  agent_api.py  agent_stateless.py  alice_output.txt  alice_session1.sh  alice_session2.sh  carol_output.txt  carol_session1.sh  memory.py  memory_manager.py
